--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,49 +12,56 @@ body{
   font-size: 24px;
 }
 
-.goku{
-  display: block;
-  width: 400px;
+.card{
+  width: 380px;
   margin: 40px auto;
-  /* box-shadow: 0px 0px 10px yellow; */
-  filter: drop-shadow(0px 0px 25px yellow);
-}
-
-.spidy{
-  /* border: 3px solid black; */
-  width: 400px;
-  margin: 40px auto;
-  text-align: center;
   box-shadow: 5px 5px 15px black;
   border-radius: 10px;
-}
-
-.titulo{
-  color: rgba(152, 12, 12, 0.923);
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.parrafo{
-  padding: 0px 20px;
-  
+  padding: 0 0 30px;
 }
 
 .imagen{
   display: block;
-  width: 400px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  object-fit: cover;
+}
+
+.contenedor{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.titulo{
+  color: #a50203;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-align: center;
+  margin: 20px 0 10px;
+}
+
+.parrafo{
+  text-align: center;
+  padding: 0px 20px;
 }
 
 .boton{
-  background-color: rgba(152, 12, 12, 0.923);
-  width: 200px;
+  background: #a50203;
+  color: #fff;
+  text-decoration: none;
+  display: block;
   text-align: center;
-  margin: 20px auto;
-  padding: 15px 30px;
-  color: white;
+  margin: 0 auto;
+  width: 180px;
+  padding: 8px;
   border-radius: 5px;
+  margin-top: 20px;
 }
 
+.goku{
+  display: block;
+  width: 400px;
+  margin: 0 auto;
+  filter: drop-shadow(0px 0px 25px yellow);
+}
